--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.15"}
+env_logger = "0.9"
+log = "0.4"
 
 [profile.dev.package."*"]
 opt-level = 3
